--- a/vi.vcxproj.filters
+++ b/vi.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Shader.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
